docs: fix layout overflow on website on mobile

--- a/docs/_includes/main.scss
+++ b/docs/_includes/main.scss
@@ -136,6 +136,7 @@ nav {
   max-width: $width;
   padding-left: 10px;
   padding-right: 10px;
+  word-break: break-word;
 
   img {
     max-width: 100%;
@@ -148,6 +149,7 @@ nav {
     background-color: rgba(27, 31, 35, .05);
     border-radius: 3px;
     font-family: SFMono-Regular, Consolas, Liberation Mono, Menlo, monospace;
+    white-space: normal;
   }
 
   h2 {
@@ -199,7 +201,7 @@ nav {
     }
 
     td:last-child, th:last-child {
-      border-left: none;
+      border-right: none;
     }
   }
 
